@@ -2,7 +2,6 @@
 #ifndef DESKTOP_SETTINGS_H
 #define DESKTOP_SETTINGS_H
 
-#include "desktop/dialogs/invitedialog.h"
 #include "desktop/scene/canvasview.h"
 #include "desktop/tabletinput.h"
 #include "desktop/view/cursor.h"
